--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -25,7 +25,7 @@
 	$color-fg-bold:				#777;	
 	$color-fg-light:			#aaa;
 
-	$color-accent-bg:			#A63E3E;
+	$color-accent-bg:			#042A6B;
 	$color-accent-fg-bold:		#ffffff;
 	$color-accent-fg:			mix($color-accent-bg, $color-accent-fg-bold, 25%);
 	$color-accent-fg-light:		mix($color-accent-bg, $color-accent-fg-bold, 40%);
